[tool.poetry]
name = "pypox"
version = "0.1.0"
description = ""
authors = ["karl robeck alferez <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.35.1"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
httpx = "^0.26.0"
pydantic = "^2.5.3"
jinja2 = "^3.1.3"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
