[tool.poetry]
name = "pypox"
version = "2.0.0.dev2"
description = ""
authors = ["karl robeck alferez <karlalferezfx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.35.1"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pylint = {extras = ["spelling"], version = "^3.0.3"}
pydantic = "^2.5.3"
jinja2 = "^3.1.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
